--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html><html>
  <html>
  <head>
-   
+   <style>
+   h1 {
+     font-size: 4em;
+     text-align: center;
+     color: #010B5B;
+   }
+   body {
+     background-color: #E7FBFB;
+   }
+   </style>
  </head>
  <body>
   <h1>Vicious Cycles</h1>
